--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,8 @@
     font-family: 'Poppins', sans-serif;
     box-sizing: border-box;
 }
-.html{
-    scroll-behavior: smooth;
+html{
+    scroll-behavior:smooth !important;
 }
 .full-container{
     max-width: 100%;
@@ -23,6 +23,25 @@
 }
 .mb-30{
     margin-bottom: 30px;
+}
+
+/* Scroll to top */
+.top{
+  background:#4e4ffaa3;
+  width: 3%;
+  text-align: center;
+  border-radius: 20px;
+  padding: 8px 0px;
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  z-index: 2;
+}
+.top:hover{
+  transform: scale(1.1);
+}
+.top i{
+  color: white;
 }
 
 /** Header **/
@@ -72,6 +91,7 @@
     width: 100%;
     position: relative;
     background-attachment: fixed;
+    z-index: -1;
 }
 
 .po-relative{
@@ -429,4 +449,8 @@ a{
     color: #8b8ec6;
   font-size: 1rem;
   margin-right: 10px;
+  transition: all .3s ease;
+}
+.social i:hover{
+    transform: scale(1.4);
 }
